--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html><!-- Last Published: Thu Dec 21 2023 04:19:41 GMT+0000 (Coordinated Universal Time) --><html data-wf-domain="www.olivierifrah.com" data-wf-page="6583b786a547d05861e293d0" data-wf-site="5e1689facb9d5168c0dcbe0b"><head><meta charset="utf-8"/><title>olivier ifrah</title><meta content="not here rn" name="description"/><meta content="olivier ifrah" property="og:title"/><meta content="not here rn" property="og:description"/><meta content="olivier ifrah" property="twitter:title"/><meta content="not here rn" property="twitter:description"/><meta property="og:type" content="website"/><meta content="summary_large_image" name="twitter:card"/><meta content="width=device-width, initial-scale=1" name="viewport"/><link href="https://assets-global.website-files.com/5e1689facb9d5168c0dcbe0b/css/olifrah.webflow.bb4354655.css" rel="stylesheet" type="text/css"/><link href="https://fonts.googleapis.com" rel="preconnect"/><link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous"/><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script><script type="text/javascript">WebFont.load({  google: {    families: ["Karla:regular,italic,700,700italic:latin,latin-ext","Inter:300,regular,500,600,700:latin,latin-ext","IBM Plex Mono:300,regular,italic,500"]  }});</script><script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script><link href="https://assets-global.website-files.com/5e1689facb9d5168c0dcbe0b/5fd51e26d660d3f2b4d0a11b_Favicon%20Portfolio.png" rel="shortcut icon" type="image/x-icon"/><link href="https://assets-global.website-files.com/5e1689facb9d5168c0dcbe0b/5fd51dad5638194086cb6957_Webclip%20Portfolio.png" rel="apple-touch-icon"/><style>
+	// Remove iOS input field inner shadow
+	.tall-input-field {
+		-webkit-appearance: none;
+	}
 
+    // Turn off default iOS dark highlight tap color
+    .tab-toggle-switch {
+      -webkit-tap-highlight-color: rgba(0,0,0,0);
+      tap-highlight-color: rgba(0,0,0,0);
+    }
+  
+</style>
+
+<!-- Fathom - beautiful, simple website analytics -->
+<script src="https://cdn.usefathom.com/script.js" data-site="ESMOZWVX" defer></script>
+<!-- / Fathom -->
+
+<script>
+
+    // Changing onClick attribute to whenClicked
+    window.onload = function() {
+        var anchors = document.getElementsByTagName('*');
+        for(var i = 0; i < anchors.length; i++) {
+            var anchor = anchors[i];
+            anchor.onclick = function() {
+                code = this.getAttribute('whenClicked');
+                eval(code);   
+            }
+        }
+    }
+    
+    // Scroll to top & track click
+    function scrollAndTrack() {
+      window.scroll({ top: 0, behavior: 'smooth' });
+    }
+  
+</script>
+
+<style>
+  @keyframes flickerAnimation {
+    0%   { opacity: 1; }
+    10%  { opacity: 0.3; }
+    20%  { opacity: 1; }
+    30%  { opacity: 0.5; }
+    40%  { opacity: 0.5; }
+    50%  { opacity: 1; }
+    60%  { opacity: 0.9; }
+    70%  { opacity: 0.2; }
+    80%  { opacity: 1; }
+    90%  { opacity: 0.7; }
+    100% { opacity: 1; }
+  }
+
+  .offline-text {
+    animation: flickerAnimation 5s infinite;
+    text-shadow: 0px 0px 8px rgba(182, 150, 112, 0.5);
+  }
+  
+</style></head><body class="offline-background"><div class="offline-main-container"><div class="offline-text">COMING SOON....</div></div><script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e1689facb9d5168c0dcbe0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="https://assets-global.website-files.com/5e1689facb9d5168c0dcbe0b/js/webflow.dd9afc9a1.js" type="text/javascript"></script></body></html>
+  
