--- a/index.html
+++ b/index.html
@@ -57,5 +57,5 @@
     text-shadow: 0px 0px 8px rgba(182, 150, 112, 0.5);
   }
   
-</style></head><body class="offline-background"><div class="offline-main-container"><div class="offline-text">COMING SOON....</div></div><script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e1689facb9d5168c0dcbe0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="https://assets-global.website-files.com/5e1689facb9d5168c0dcbe0b/js/webflow.dd9afc9a1.js" type="text/javascript"></script></body></html>
+</style></head><body class="offline-background"><div class="offline-main-container"><div class="offline-text">LOADING SOON....</div></div><script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e1689facb9d5168c0dcbe0b" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="https://assets-global.website-files.com/5e1689facb9d5168c0dcbe0b/js/webflow.dd9afc9a1.js" type="text/javascript"></script></body></html>
   
